fixed torch effect and mobile sizing and visibility

--- a/reactsndbx/src/index.css
+++ b/reactsndbx/src/index.css
@@ -1,6 +1,6 @@
 :root {
   font-family: monospace;
-  
+  overflow: hidden;
 }
 
 body {
@@ -65,7 +65,6 @@ body {
   position: absolute;
   top: 0%;
   left: 0%;
-  display: block;
   overflow-wrap: break-word;
 }
 
@@ -88,7 +87,13 @@ p{
     overflow-wrap: break-word;
   animation: slideFromLeft .5s cubic-bezier(1, -0.21, .51, 1.3) forwards;
 }
-
+.hover {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background: radial-gradient(circle at var(--x) var(--y), transparent 1%, rgba(0, 0, 0, .95) 40%);
+}
 
 @keyframes slideFromLeft {
   0% {
@@ -104,16 +109,19 @@ p{
 
 
 @media screen and (max-width: 900px) {
-  p {
-    width: 100%;
-  }
-
-
-}
-
-@media screen and (max-width: 900px) {
   .name {
     font-size: 60px;
+  }
+.hover {
+  display: none;
+}
+p {
+  width: 100%;
+}
+.bg{
+  mask-image: none;
+  -webkit-mask-image: none;
+    opacity: 0.1;
   }
 }
 
